Fix fonts and spacing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,9 @@
 }
 
 body {
-  font: medium "Poppins", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: medium;
   min-height: 100vh;
   padding: 2em;
   display: flex;
@@ -17,14 +19,20 @@ body {
 }
 
 .Contact {
-  margin-top: 1em;
+  margin-top: 2rem;
   display: flex;
   gap: 1em;
   justify-content: center;
 }
 
+.Name {
+  margin-top: 0;
+  margin-bottom: 2rem;
+}
+
 .Title {
   margin-top: 0;
+  margin-bottom: 0.5em;
 }
 
 .Link {
